# python-project-52

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  models.py  settings.py  urls.py  views.py
task_manager/templates/: base.html  create_user.html  index.html  users.html
