[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
