[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Simple task manager"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-bootstrap5 = "^23.3"
django = "^5.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
